--- a/main.html
+++ b/main.html
@@ -12,7 +12,6 @@ function randomizer () {
 // generate "random" play based on randomizer()
 function computerPlay (num) {
     let result = "";
-  
     if (num <= 33) {
         result = "Rock";
     } else if (num <= 66) {
@@ -73,12 +72,30 @@ function gameRound(playerSelection, computerSelection) {
     } else {
         result = "Sorry, something seems to have gone wrong!";
     }
-console.log(result);
 return result
 
 }
+
+// I feel like I shouldn't have to set all these up?
 let counter = prompt ("How many rounds do you want to Play?");
 let round = prompt("rock? Paper? Scissors?");
+let countUp = 0;
+let playerScore = 0;
+let computerScore = 0;
+
+// current functionality
+    // can call itself to x number of times where x is a number user specified
+    // can console log winning/losing statement per a round
+    // can console log round count with message
+
+    // cannot track score over time
+    // cannot compare tracked scores
+
+    // this could probably be done more cleanly with a for - loop that
+    // returns i as the round count.
+    // additionally that would make it easier to count up score
+    // a simple if else. - especially if we put the round messages in variables
+    // aka if lost - pc ++ if win self++ if tie - do nothing.
 
 function game (humanPlay, roundCount) {
     let passer = computerPlay(randomizer());
@@ -87,9 +104,10 @@ function game (humanPlay, roundCount) {
     if (countDown === 0) {
         console.log("game over")
         return "game over";
-    } else if (countDown >= 0) {
-        countDown = countDown - 1;
-        console.log(countDown);
+    } else {
+        countDown--;
+        countUp++;
+        console.log(gameRound(humanPlay, passer) + " Round " + countUp);
         return game(prompt("rock? Paper? Scissors?"), countDown);
     }
 }
