--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <div id ="final"> <h1>Hello Friends</h1></div>
 
     <div id="scoreCard">
+        <p> your score </p>
         <p id="playerScore">0</p>
+        <p> round count </p>
         <p id="round">1</p>
+        <p> computer score </p>
         <p id="computerScore">0</p>    
     </div>
 
